# mcr-py-email-builder-service

./: MANIFEST.in  Makefile  app.py  build_docker.sh  dockerfile  pyproject.toml  requirements.txt  setup.py  start.sh  test.ipynb
src/: app.py  email_routes.py  routes.py  token_usage_log.csv
src/helper/: helper_function.py
src/llm/: llm.py
src/response_structure/: response_structure.py
src/state/: output_states.py  states.py
src/utils/: default_values.py  prompt.py
